[package]
name = "lab_allocator"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["bitmap", "buddy", "tlsf", "slab"] }
axlog = { workspace = true }
memory_addr = "0.3"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
